<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/app_name">
        <Preference android:title="@string/pref_app_des" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_about">
        <Preference
            android:summary="@string/pref_title_coder"
            android:title="@string/pref_summary_dev">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://weibo.com/zhangqi8" />
        </Preference>
        <Preference android:key="@string/pref_key_version" />

        <Preference android:title="@string/pref_title_github">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.github.com/stormzhang" />
        </Preference>

        <Preference android:title="@string/pref_title_donate">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/donate_url" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="majun">
        <PreferenceScreen
            android:summary="settings about emotions"
            android:title="Emotions">
            <CheckBoxPreference
                android:defaultValue="true"
                android:summaryOff="No,I am sorry."
                android:summaryOn="Yes,I love you!"
                android:title="Love me?"></CheckBoxPreference>
            <CheckBoxPreference
                android:defaultValue="false"
                android:summaryOff="No,you are a good person."
                android:summaryOn="Yes,I hate you!"
                android:title="Hate me?"></CheckBoxPreference>
        </PreferenceScreen>

        <PreferenceCategory
            android:key="mylocation"
            android:summary="我的位置"
            android:title="我的位置源">
            <ListPreference
                android:dialogTitle="请选择城市"
                android:entries="@array/cities"
                android:entryValues="@array/cities"
                android:key="mycities"
                android:summary="点击弹出城市列表"
                android:title="所属城市" />
        </PreferenceCategory>
    </PreferenceCategory>

</PreferenceScreen>